--- a/publications.html
+++ b/publications.html
@@ -147,6 +147,15 @@ Further details of published journal articles may be obtained via my
 <h3>Journal Papers Published</h3>
 <ol>
 
+<li>Burbanks AD, Osbaldestin AH, Thurlby JA,<br /><em>Rigorous bounds on the fractal dimension of the period-doubling attractor</em>,<br />In preparation, 2020.</li>
+
+<li>Burbanks AD, Osbaldestin AH, Thurlby JA,<br /><em>Period-doubling renormalisation fixed points in unimodal maps of odd critical exponent</em>,<br />In preparation, 2020.</li>
+
+<li>Cerasuolo M, Burbanks AD, Turner L,<br /><em>Multiscale modelling of neuroendocrine transdifferentiation in prostate cancer cells</em>,<br />In preparation, 2020.</li>
+
+<li>Burbanks AD, Osbaldestin AH, Thurlby JA,<br /><em>Rigorous bounds on period-doubling renormalisation fixed-points in maps with critical point of degree 4</em>,<br />Submitted to Communications in Mathematical Physics, [arXiv:2006.13127], 2020.  
+[&nbsp;<a href="https://arxiv.org/abs/2006.13127">arXiv:2006.13127</a>&nbsp;]</li>
+
 <li>Wairegi A, Gamboa A, Burbanks AD, Lee EA, Farrelly D,<br /><em>Microscopic Superfluidity in 4He Clusters Stirred by a Rotating Impurity Molecule</em>,<br />Physical Review Letters, 112, 143401 (April 2014).
 [&nbsp;<a href="http://dx.doi.org/10.1103/PhysRevLett.112.143401">doi:10.1103/PhysRevLett.112.143401</a>&nbsp;]</li>
 
@@ -322,7 +331,7 @@ Public Awareness &amp; Schools Support for Maths (PASS Maths/+plus),
           <p style="padding-top:36px;">
 Web page created using free open-source software under GNU/Linux.
 Last updated
-2016-11-17.</p>
+2020-06-24.</p>
         </div>
         <div class="third">
           <p style="padding-top:36px;">
