--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@ Systems Group.
 	<li><a href="programmes.html">Research Programmes</a></li>
 	<li><a href="seminars.html">Seminars</a></li>
 	<li><a href="conferences.html">Conferences</a></li>
-	<li><a href="funding.html">Funding</a></li>
       </ul>
     </li>
     <li><a href="teaching.html" accesskey="4">Teaching</a>
@@ -120,34 +119,32 @@ Systems Group.
 <div class="section">
   <div class="third">
     <a href="profile.html"><img src="small/adb.jpg" width="100%" alt="Doctor Andrew Burbanks" /></a><h3><a href="profile.html">Doctor Andrew Burbanks</a></h3>
-Doctor Andrew Burbanks, Principal Lecturer<br />
-Department of Mathematics<br />
+Doctor Andrew Burbanks<br />
+Associate Head (Research and Innovation)<br />
+School of Mathematics and Physics<br />
 University of Portsmouth<br />
 <tt>andrew.burbanks@port.ac.uk</tt>
   </div>
   <div class="third">
-    <a href="profile.html"><img src="small/hilbert14.jpg" width="100%" alt="Profile" /></a><h3><a href="profile.html">Profile</a></h3>I am a Principal Lecturer in Mathematics and
-    an Associate Member of the Institute of Cosmology and		
-    Gravitation at the University of Portsmouth in the&nbsp;UK.&nbsp;(<a href="profile.html">more</a>)
+    <a href="profile.html"><img src="small/hilbert14.jpg" width="100%" alt="Profile" /></a><h3><a href="profile.html">Profile</a></h3>I am an Associate Head (with responsibility for Research and Innovation) and a Principal Lecturer in the School of Mathematics and Physics at the University of Portsmouth, UK.  I am also
+    an Associate Member of the Institute of Cosmology and Gravitation.&nbsp;(<a href="profile.html">more</a>)
   </div>
   <div class="third last">
-    <a href="publications.html"><img src="small/transport.jpg" width="100%" alt="Research" /></a><h3><a href="publications.html">Research</a></h3>My main research interests are in the area of Dynamical Systems, in particular transport in Hamiltonian systems and universal&nbsp;phenomena.&nbsp;(<a href="publications.html">more</a>)
+    <a href="publications.html"><img src="small/transport.jpg" width="100%" alt="Research" /></a><h3><a href="publications.html">Research</a></h3>My main research interests are in the area of Dynamical Systems, in particular renormalisation group methods and universal&nbsp;phenomena.&nbsp;(<a href="publications.html">more</a>)
   </div>
 </div><!-- section -->
 
 <div class="section">
   <div class="third">
-    <a href="teaching.html"><img src="small/personwithlightbulb.png" width="100%" alt="Teaching" /></a><h3><a href="teaching.html">Teaching</a></h3>My main teaching responsibilities at present include Final Year undergraduate courses in Pricing Financial Derivatives and Mathematical&nbsp;Programming.&nbsp;(<a href="teaching.html">more</a>)
+    <a href="teaching.html"><img src="small/personwithlightbulb.png" width="100%" alt="Teaching" /></a><h3><a href="teaching.html">Teaching</a></h3>My main teaching responsibilities at present include undergraduate courses in Financial Derivative Pricing and Final Year Projects across a number of topics.&nbsp;(<a href="teaching.html">more</a>)
   </div>
   <div class="third">
     <a href="graphics.html"><img src="small/s3scaf05.jpg" width="100%" alt="Public Engagement" /></a><h3><a href="graphics.html">Public Engagement</a></h3>I have been involved in several successful projects on the interface between science and public understanding, including the Mathematics Posters on the London Underground project in&nbsp;2000.&nbsp;(<a href="graphics.html">more</a>)
   </div>
   <div class="third last">
-    <a href="http://www.port.ac.uk/maths"><img src="small/deptlozengegrey.png" width="100%" alt="Department of Mathematics" /></a><h3><a href="http://www.port.ac.uk/maths">Department of Mathematics</a></h3>
-The Department of Mathematics at the University of Portsmouth undertakes
-fundamental research in the mathematical sciences. Together with the Institute of Cosmology and Gravitation (ICG), Applied Mathematics at
-Portsmouth gained the joint highest
-3*+4* grade in the UK in the&nbsp;RAE&nbsp;2008.&nbsp;(<a href="http://www.port.ac.uk/maths">more</a>)
+    <a href="http://www.port.ac.uk/maths"><img src="small/deptlozengegrey.png" width="100%" alt="School of Mathematics and Physics" /></a><h3><a href="http://www.port.ac.uk/maths">School of Mathematics and Physics</a></h3>
+The School of Mathematics and Physics at the University of Portsmouth undertakes
+fundamental research in the mathematical sciences.&nbsp;(<a href="http://www.port.ac.uk/maths">more</a>)
   </div>
 </div><!-- section -->
 
@@ -156,7 +153,7 @@ Portsmouth gained the joint highest
           <p style="padding-top:36px;">
 Web page created using free open-source software under GNU/Linux.
 Last updated
-2016-11-17.</p>
+2020-06-24.</p>
         </div>
         <div class="third">
           <p style="padding-top:36px;">
