--- a/seminars.html
+++ b/seminars.html
@@ -44,7 +44,6 @@ Systems Group.
 	<li><a href="programmes.html">Research Programmes</a></li>
 	<li><a href="seminars.html">Seminars</a></li>
 	<li><a href="conferences.html">Conferences</a></li>
-	<li><a href="funding.html">Funding</a></li>
       </ul>
     </li>
     <li><a href="teaching.html" accesskey="4">Teaching</a>
@@ -125,7 +124,6 @@ Systems Group.
   <li><a href="programmes.html">Research Programmes</a></li>
   <li><a href="seminars.html">Seminars</a></li>
   <li><a href="conferences.html">Conferences</a></li>
-  <li><a href="funding.html">Funding</a></li>
  </ul>
 
 
@@ -156,6 +154,7 @@ Systems Group.
 	  <h3>Recent Invited National Seminars</h3>
 	  
 	  <ul>
+<li>Jun 2020 - Mathematics colloquium, The Open University, UK.</li>
             <li>Jan 2012 - Department of Mathematics, University of Kent, Canterbury.</li>
 	    <li>July 2007 - Royal Society Summer Science Exhibition. The Dynamics of Spin.</li>
 	    <li>19th May 2007 - Sixth Institute of Mathematics and its Applications (IMA)Younger Mathematicians Conference, LMS, London.</li>
@@ -201,7 +200,7 @@ Systems Group.
           <p style="padding-top:36px;">
 Web page created using free open-source software under GNU/Linux.
 Last updated
-2016-11-17.</p>
+2020-06-24.</p>
         </div>
         <div class="third">
           <p style="padding-top:36px;">
