--- a/publications.html
+++ b/publications.html
@@ -143,6 +143,9 @@ Further details of published journal articles may be obtained via my
 </p>
 
 <h3>Journal Papers Published</h3>
+
+<p><img src="icons/orcid_16x16.gif" width=16 height=16 /><a href="https://orcid.org/0000-0003-0685-6670">https://orcid.org/0000-0003-0685-6670</a></p>
+
 <ol>
 
 <li>Burbanks AD, Osbaldestin AH, Thurlby JA,<br /><em>Rigorous bounds on the fractal dimension of the period-doubling attractor</em>,<br />In preparation, 2020.</li>
