--- a/publications.html
+++ b/publications.html
@@ -142,7 +142,7 @@ Further details of published journal articles may be obtained via my
 <a href="http://www.researcherid.com/rid/A-3316-2012">ResearcherID entry</a>.
 </p>
 
-<h3>Journal Papers Published</h3>
+<h3>Papers</h3>
 
 <p><img src="icon/orcid_16x16.gif" width=16 height=16 /><a href="https://orcid.org/0000-0003-0685-6670">https://orcid.org/0000-0003-0685-6670</a></p>
 
