--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,7 @@ at the University of Portsmouth and a member of the Nonlinear and Complex
 Systems Group.
 " />
     <meta name="keywords" content=" " />
+    <meta name="referrer" content="origin" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>Doctor Andrew Burbanks: Profile</title>
     <meta name="viewport" content="width=device-width" />
