--- a/programmes.html
+++ b/programmes.html
@@ -9,6 +9,7 @@ at the University of Portsmouth and a member of the Nonlinear and Complex
 Systems Group.
 " />
     <meta name="keywords" content=" " />
+    <meta name="referrer" content="origin" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>Doctor Andrew Burbanks (Department of Mathematics, University of Portsmouth)</title>
     <meta name="viewport" content="width=device-width" />
