--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@ Systems Group.
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>Doctor Andrew Burbanks: Profile</title>
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="./css/home.css" type="text/css" media="handheld,screen" />
+    <link rel="stylesheet" href="./css/home.css" type="text/css" media="screen" />
 <!--[if IE]><link href="./css/screen.css" rel="stylesheet" type="text/css" media="Screen" /><![endif]-->
     <link rel="stylesheet" href="./css/screen.css" type="text/css" media="print,screen" />
     <link rel="stylesheet" href="./css/slide.css" type="text/css"/>
